[project]
name = "abm-ace"
version = "0.1.0"
description = "Agent-based modeling for adaptive climate-economy dynamics"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ABM-ACE Contributors" }]
keywords = [
  "agent-based-modeling",
  "computational-economics",
  "complex-systems",
  "climate-policy",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = ["numpy", "pandas", "networkx", "matplotlib"]

[tool.black]
line-length = 88
